# strava-visualizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: auth.py
tests/: test_main.py
